; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/regtests/gdi/extr_xlate.c_Initialize.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/regtests/gdi/extr_xlate.c_Initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hdcSrc = common dso_local global i8* null, align 8
@hdcDst = common dso_local global i8* null, align 8
@hbmpCompat = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"CreateCompatibleBitmap failed\0A\00", align 1
@iDcFormat = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"got iDcFormat = %ld\0A\00", align 1
@ajBits1 = common dso_local global i32 0, align 4
@hbmp1bpp_a = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [21 x i8] c"CreateBitmap failed\0A\00", align 1
@hbmp1bpp_b = common dso_local global i64 0, align 8
@ajBits8 = common dso_local global i32 0, align 4
@hbmp8bpp_a = common dso_local global i64 0, align 8
@hbmp8bpp_b = common dso_local global i64 0, align 8
@ajBits16 = common dso_local global i32 0, align 4
@hbmp16bpp_a = common dso_local global i64 0, align 8
@hbmp16bpp_b = common dso_local global i64 0, align 8
@ajBits24 = common dso_local global i32 0, align 4
@hbmp24bpp_a = common dso_local global i64 0, align 8
@hbmp24bpp_b = common dso_local global i64 0, align 8
@ajBits32 = common dso_local global i32 0, align 4
@hbmp32bpp_a = common dso_local global i64 0, align 8
@hbmp32bpp_b = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @Initialize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Initialize() #0 {
  %1 = call i8* @CreateCompatibleDC(i32 0)
  store i8* %1, i8** @hdcSrc, align 8
  %2 = call i8* @CreateCompatibleDC(i32 0)
  store i8* %2, i8** @hdcDst, align 8
  %3 = call i32 @GetDC(i32 0)
  %4 = call i64 @CreateCompatibleBitmap(i32 %3, i32 4, i32 2)
  store i64 %4, i64* @hbmpCompat, align 8
  %5 = load i64, i64* @hbmpCompat, align 8
  %6 = icmp ne i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ok(i32 %7, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 (...) @GetRealColorDepth()
  store i32 %9, i32* @iDcFormat, align 4
  %10 = load i32, i32* @iDcFormat, align 4
  %11 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* @ajBits1, align 4
  %13 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 1, i32 %12)
  store i64 %13, i64* @hbmp1bpp_a, align 8
  %14 = load i64, i64* @hbmp1bpp_a, align 8
  %15 = icmp ne i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @ok(i32 %16, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %18 = load i32, i32* @ajBits1, align 4
  %19 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 1, i32 %18)
  store i64 %19, i64* @hbmp1bpp_b, align 8
  %20 = load i64, i64* @hbmp1bpp_b, align 8
  %21 = icmp ne i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @ok(i32 %22, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %24 = load i32, i32* @ajBits8, align 4
  %25 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 8, i32 %24)
  store i64 %25, i64* @hbmp8bpp_a, align 8
  %26 = load i64, i64* @hbmp8bpp_a, align 8
  %27 = icmp ne i64 %26, 0
  %28 = zext i1 %27 to i32
  %29 = call i32 @ok(i32 %28, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %30 = load i32, i32* @ajBits8, align 4
  %31 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 8, i32 %30)
  store i64 %31, i64* @hbmp8bpp_b, align 8
  %32 = load i64, i64* @hbmp8bpp_b, align 8
  %33 = icmp ne i64 %32, 0
  %34 = zext i1 %33 to i32
  %35 = call i32 @ok(i32 %34, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %36 = load i32, i32* @ajBits16, align 4
  %37 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 16, i32 %36)
  store i64 %37, i64* @hbmp16bpp_a, align 8
  %38 = load i64, i64* @hbmp16bpp_a, align 8
  %39 = icmp ne i64 %38, 0
  %40 = zext i1 %39 to i32
  %41 = call i32 @ok(i32 %40, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %42 = load i32, i32* @ajBits16, align 4
  %43 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 16, i32 %42)
  store i64 %43, i64* @hbmp16bpp_b, align 8
  %44 = load i64, i64* @hbmp16bpp_b, align 8
  %45 = icmp ne i64 %44, 0
  %46 = zext i1 %45 to i32
  %47 = call i32 @ok(i32 %46, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %48 = load i32, i32* @ajBits24, align 4
  %49 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 24, i32 %48)
  store i64 %49, i64* @hbmp24bpp_a, align 8
  %50 = load i64, i64* @hbmp24bpp_a, align 8
  %51 = icmp ne i64 %50, 0
  %52 = zext i1 %51 to i32
  %53 = call i32 @ok(i32 %52, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %54 = load i32, i32* @ajBits24, align 4
  %55 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 24, i32 %54)
  store i64 %55, i64* @hbmp24bpp_b, align 8
  %56 = load i64, i64* @hbmp24bpp_b, align 8
  %57 = icmp ne i64 %56, 0
  %58 = zext i1 %57 to i32
  %59 = call i32 @ok(i32 %58, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %60 = load i32, i32* @ajBits32, align 4
  %61 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 32, i32 %60)
  store i64 %61, i64* @hbmp32bpp_a, align 8
  %62 = load i64, i64* @hbmp32bpp_a, align 8
  %63 = icmp ne i64 %62, 0
  %64 = zext i1 %63 to i32
  %65 = call i32 @ok(i32 %64, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  %66 = load i32, i32* @ajBits32, align 4
  %67 = call i64 @CreateBitmap(i32 4, i32 2, i32 1, i32 32, i32 %66)
  store i64 %67, i64* @hbmp32bpp_b, align 8
  %68 = load i64, i64* @hbmp32bpp_b, align 8
  %69 = icmp ne i64 %68, 0
  %70 = zext i1 %69 to i32
  %71 = call i32 @ok(i32 %70, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i8* @CreateCompatibleDC(i32) #1

declare dso_local i64 @CreateCompatibleBitmap(i32, i32, i32) #1

declare dso_local i32 @GetDC(i32) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @GetRealColorDepth(...) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i64 @CreateBitmap(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
